# DQM4hep

./: .gitignore  .project  .travis.yml  CMakeLists.txt  README.md  README.txt  Readme.md  cvmfsInstall.cmake  dqm4hepenv  dqmenvrc  newIO.md
DQMOnline/: .gitignore  CMakeLists.txt  Readme.md
DQMOnline/.travis-ci.d/: compile_and_test.sh
DQMOnline/include/: .gitignore
DQMOnline/include/dqm4hep/: AppEvent.h  AppEventLoop.h  AppEvents.h  AppTimer.h  Application.h  Cycle.h  EventCollector.h  EventCollectorClient.h  EventSource.h  Module.h  ModuleApi.h  ModuleApplication.h  OnlineElement.h  OnlineManagerServer.h  OnlineRoutes.h  RemoteLogger.h  RunControl.h  RunControlInterface.h  RunControlServer.h
DQMOnline/main/: dqm4hep-dump-event.cc  dqm4hep-online-logger.cc  dqm4hep-start-event-collector.cc  dqm4hep-start-module.cc  dqm4hep-start-online-mgr.cc  dqm4hep-start-random-event-source.cc  dqm4hep-start-rc-server.cc
DQMOnline/source/include/dqm4hep/: AppEvent.h  AppEvents.h  EventCollector.h  MonitorElementClient.h  MonitorElementCollector.h  OnlineElement.h  RemoteLogger.h  RunControl.h
DQMOnline/source/main/: dqm4hep-start-random-event-source.cc
DQMOnline/source/src/: ModuleApi.cc  OnlineElement.cc
DQMOnline/source/src/plugins/: HttpRunControlPlugin.cc  TestStandaloneModule.cc
DQMOnline/src/: AppEvent.cc  AppEventLoop.cc  AppTimer.cc  Application.cc  Cycle.cc  EventCollector.cc  EventCollectorClient.cc  EventSource.cc  Module.cc  ModuleApi.cc  ModuleApplication.cc  OnlineElement.cc  OnlineManagerServer.cc  OnlineRoutes.cc  RemoteLogger.cc  RunControl.cc  RunControlInterface.cc  RunControlServer.cc
DQMOnline/src/plugins/: HttpRunControlPlugin.cc  TestAnalysisModule.cc  TestStandaloneModule.cc
net/source/dim/: CMakeLists.txt
online/source/: CMakeLists.txt
online/source/main/: dqm4hep-online-logger.cc  dqm4hep-start-event-collector.cc
online/source/src/: AppTimer.cc  Application.cc  EventCollectorClient.cc  EventSource.cc  Module.cc  ModuleApplication.cc  OnlineManagerServer.cc  OnlineRoutes.cc  RemoteLogger.cc  RunControl.cc  RunControlInterface.cc  RunControlServer.cc
online/source/tests/: test-online-element.cc
source/: .gitignore  CMakeLists.txt
source/dim/: CMakeLists.txt
source/dim/dim4mac/: INSTALL_MAC.txt  makefile_common.patch  setupMac.sh  tcpip.c.patch
source/dim/dimjs/: index.html.rename.me
source/dim/include/: dic.h  dim_common.h
source/dim/src/: dic.c  dis.c  discpp.cxx  dns.c  tcpip.c
source/include/: .gitignore
source/include/dqm4hep/: AllocatorHelper.h  AnalysisHelper.h  AnalysisModule.h  AnalysisModuleApplication.h  Archiver.h  Base64Helper.h  BufferEvent.h  Client.h  CoreTool.h  Cycle.h  DBFileHandler.h  DBInterface.h  DQM4HEP.h  DQMAlertSystem.h  DQMAnalysisModule.h  DQMAnalysisModuleApplication.h  DQMApplication.h  DQMArchiver.h  DQMCartesianVector.h  DQMCore.h  DQMCoreTool.h  DQMCycle.h  DQMDBFileHandler.h  DQMDBInterface.h  DQMDataConverter.h  DQMDataStream.h  DQMDimEventClient.h  DQMDimEventCollector.h  DQMDimRunControlClient.h  DQMDirectory.h  DQMElectronicsMapping.h  DQMEvent.h  DQMEventClient.h  DQMEventClientImp.h  DQMEventCollector.h  DQMEventCollectorApplication.h  DQMEventCollectorImp.h  DQMEventCounterCycle.h  DQMEventStreamer.h  DQMFileHandler.h  (+109 more)
source/include/tclap/: StdOutput.h
source/javascript/: dqm4hep-net-client.js  dqm4hep-net-client.min.js
source/main/: dqm4hep-cpustats.cc  dqm4hep-dump-plugins.cc  dqm4hep-generate-qtest-file.cc  dqm4hep-memstats.cc  dqm4hep-mysql-create-db.cc  dqm4hep-mysql-create-user.cc  dqm4hep-mysql-dump-parameters.cc  dqm4hep-mysql-push-parameters.cc  dqm4hep-mysql-rm-user.cc  dqm4hep-mysql-set-parameter.cc  dqm4hep-netstats.cc  dqm4hep-run-qtests.cc  dqm4hep-send-command.cc  dqm4hep-send-request-response.cc  dqm4hep-send-request.cc  dqm4hep-server-info.cc  dqm4hep-server-list.cc  dqm4hep-server-running.cc  dqm4hep-start-log-collector.cc  dqm4hep-subscribe-service.cc  dqm4hep-ws-server.cc  dqm4hep_db_insert_config_file.cc  dqm4hep_open_root_canvas.cc  dqm4hep_run_control.cc  dqm4hep_start_analysis_module.cc  dqm4hep_start_dqm_monitor_gui.cc  dqm4hep_start_event_collector.cc  dqm4hep_start_external_application.cc  dqm4hep_start_job_interface.cc  dqm4hep_start_lcio_file_service.cc  dqm4hep_start_monitor_element_collector.cc  dqm4hep_start_run_control.cc  dqm4hep_start_run_control_server.cc  dqm4hep_start_shm_driver.cc  dqm4hep_start_standalone_module.cc  test-json-binary.cc  test-server.cc
source/src/: AlertSystem.cc  AllocatorHelper.cc  AnalysisHelper.cc  AnalysisModuleApplication.cc  Archiver.cc  Base64Helper.cc  BufferEvent.cc  CartesianVector.cc  Client.cc  CoreTool.cc  Cycle.cc  DBFileHandler.cc  DBInterface.cc  DQM4HEP.cc  DQMAlertSystem.cc  DQMAnalysisModule.cc  DQMAnalysisModuleApplication.cc  DQMArchiver.cc  DQMCartesianVector.cc  DQMCoreTool.cc  DQMCycle.cc  DQMDBFileHandler.cc  DQMDBInterface.cc  DQMDataStream.cc  DQMDimEventClient.cc  DQMDimEventCollector.cc  DQMDimRunControlClient.cc  DQMDirectory.cc  DQMEventClient.cc  DQMEventCollector.cc  DQMEventCollectorApplication.cc  DQMEventCounterCycle.cc  DQMFileHandlerFactory.cc  DQMGenericEvent.cc  DQMLocalFileHandler.cc  DQMMessaging.cc  DQMModule.cc  DQMModuleApi.cc  DQMModuleApplication.cc  DQMMonitorElement.cc  (+83 more)
source/src/elog/: ELogInterface.cc
source/src/evb/: DQMShmProxyApplication.cc  ShmProxyApplication.cc
source/src/lcio/: DQMLCEventStreamer.cc  DQMLcioReaderListener.cc
source/src/plugins/: BufferEventStreamer.cc  Chi2Test.cc  ExactRefCompareTest.cc  FitParamInRangeTest.cc  GenericEventReader.cc  GenericEventStreamer.cc  GenericEventXMLReader.cc  KolmogorovTest.cc  MeanWithinExpectedTest.cc  PropertyWithinExpectedTest.cc
source/src/qtest/: ExactRefCompareTest.cc  MeanWithinExpectedTest.cc
source/tests/: test-directory.cc  test-global-header.cc  test-me-json.cc  test-me-mgr.cc  test-monitor-elements.cc  test-plugin.cc  test-qtest-exact-ref-comp.cc  test-qtest-fit-param-range.cc  test-qtest-kolmogorov.cc  test-qtest-property-within-exp.cc  test-root-event-streamer.cc  test-storage.cc  test-xmlparser.cc
(+483 files in other folders)
